fix(datepicker): modal overflow

--- a/packages/ods/src/components/datepicker/src/components/ods-datepicker/ods-datepicker.scss
+++ b/packages/ods/src/components/datepicker/src/components/ods-datepicker/ods-datepicker.scss
@@ -41,6 +41,11 @@ $ods-datepicker-padding: 6px;
   position: relative;
 }
 
+:host(.ods-datepicker--fixed) {
+  position: fixed;
+}
+
+
 .ods-datepicker {
   &__input {
     $input: &;
